<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_shape">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Choose"
        android:textSize="20sp"
        android:fontFamily="@font/extrabold"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />
    <LinearLayout
        android:id="@+id/upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">


        <ImageButton
            android:id="@+id/from_map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"

            android:contentDescription="@string/choose_from"
            android:src="@drawable/map_pin" />

        <ImageButton
            android:id="@+id/current_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Currentlocation"
            android:src="@drawable/location_" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upper"
        app:layout_constraintVertical_bias="0.01999998">

        <TextView
            android:id="@+id/from_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fromMap"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_bold"
            />

        <TextView
            android:layout_marginStart="80dp"
            android:id="@+id/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/Currentlocation"
            android:fontFamily="@font/nunito_bold"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>